Fix to wrap long title

--- a/client/stylesheets/blocks/_user.scss
+++ b/client/stylesheets/blocks/_user.scss
@@ -61,6 +61,7 @@
     .post-title {
       color: $oc-gray-9;
       margin-top: 0;
+      word-wrap: break-word;
     }
 
     .post-body {
